--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 .mainContainer {
   background-color: #a9a9a9;
-  margin: 30px;
+  width: 800px;
+  margin: 30px auto;
   flex: 1;
   display: flex;
   justify-content: center;
@@ -12,7 +13,7 @@
   flex-direction: column;
   justify-content: center;
   max-width: 600px;
-  padding: 20px;
+  padding: 20px 0 60px;
 }
 
 .header {
@@ -33,7 +34,7 @@
 .waveButton,
 .connectWalletButton {
   cursor: pointer;
-  margin-top: 25px;
+  margin: 10px 0 25px;
   padding: 12px;
   font-size: 16px;
   font-weight: 600;
@@ -41,6 +42,7 @@
   border: none;
   border-radius: 5px;
   box-shadow: 2px 3px 16px 3px rgba(56, 55, 55, 0.8);
+  transition: 0.4s;
 }
 
 .connectWalletButton {
@@ -49,4 +51,49 @@
   background-color: dimgrey;
   color: #fff;
   box-shadow: 2px 3px 16px 3px rgba(255, 255, 255, 0.8);
+}
+
+.waveButton:hover {
+  filter: brightness(0.85);
+}
+
+.connectWalletButton:hover {
+  filter: brightness(0.85);
+}
+
+.inputContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 20px 0;
+}
+
+.inputContainer label {
+  color: #ededed;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.inputContainer input {
+  width: 80%;
+  cursor: pointer;
+  margin-top: 10px;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 600;
+  color: #474343;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 2px 3px 16px 3px rgba(56, 55, 55, 0.8);
+}
+
+.waveListContainer {
+  background: #fff;
+  color: #474343;
+  font-weight: 600;
+  border-radius: 5px;
+  box-shadow: 2px 3px 16px 3px rgba(56, 55, 55, 0.8);
+  margin-top: 16px;
+  padding: 8px 30px;
 }
